--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   "dependencies": {
     "react": "15.4.1",
     "react-dom": "15.4.1",
+    "react-jss": "4.2.0",
     "react-redux": "4.4.6",
     "redux": "3.6.0"
   },
