--- a/package.json
+++ b/package.json
@@ -39,6 +39,9 @@
   "eslintConfig": {
     "parser": "babel-eslint",
     "extends": "airbnb",
+    "env": {
+      "browser": true
+    },
     "rules": {
       "no-console": 0,
       "arrow-parens": [
