--- a/package.json
+++ b/package.json
@@ -67,6 +67,7 @@
       "import/no-unresolved": 0,
       "import/no-extraneous-dependencies": 0,
       "import/prefer-default-export": 0,
+      "jsx-a11y/no-static-element-interactions": 0,
       "react/jsx-curly-spacing": 0,
       "react/jsx-filename-extension": 0,
       "react/forbid-prop-types": 0,
